[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/entities/Entity.gd" type="Script" id=1]
[ext_resource path="res://scenes/system/StateMachine.gd" type="Script" id=2]

[node name="Entity" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="EntityStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Trigger" type="Area2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.05
